--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=Electronic
+spring.datasource.url=jdbc:mysql://localhost:3306/electronic_store
+spring.datasource.username=root
+spring.datasource.password=root
+
